fix(System Message): :art: fixed weather part

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "Main chat",
-        "Chat features"
+        "Chat features",
+        "System Message"
     ]
 }
