fix(commands): :zap: upgrade open interpreter command added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "Main chat",
         "Chat features",
-        "System Message"
+        "System Message",
+        "commands"
     ]
 }
