perf(Model): :zap: Temperture = 0 for better performance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Main chat",
         "Chat features",
         "System Message",
-        "commands"
+        "commands",
+        "Model"
     ]
 }
